--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="" rel="stylesheet" />
 </head>
 <body>
-    <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
-    <a href="./pages/about.html">About</a>s
-    <a href="./pages/images.html">Images!</a>
-    <img src="images/dog.jpg" alt="dog" />
+    <h1> Home Page</h1>
+    <a href="images.html" > Images Page </a> <br> <br>
+    <a href="./pages/about.html" > About Page </a> <br> <br>
+    <img src="./images/dog.jpg">
 </body>
 </html>
